# lootr-vanilla

./: README.md  pyproject.toml
.github/workflows/: modrinth_update.yml
lootr/: __init__.py  plugin.py
src/data/lootr/advancement/impl/: on_open.json
src/data/lootr/function/impl/: load.mcfunction  print_version.mcfunction  test_load.mcfunction  tick.mcfunction
src/data/lootr/function/impl/loot/: on_open.mcfunction
src/data/lootr/loot_table/: elytra.json  random_ocean_ruins.json
